[dev] restore community